--- a/Templates/Layout.html
+++ b/Templates/Layout.html
@@ -54,29 +54,34 @@
                         <li class="side-nav-title side-nav-item">Navigation</li>
 
                         <li class="side-nav-item">
-                            <a data-bs-toggle="collapse" href="#sidebarDashboards" aria-expanded="false" aria-controls="sidebarDashboards" class="side-nav-link">
+                            <a data-bs-toggle="collapse" href="#dashboard" aria-expanded="false" aria-controls="sidebarDashboards" class="side-nav-link">
                                 <i class="uil-home-alt"></i>
-                                <span class="badge bg-success float-end">4</span>
+                                <span class="badge bg-success float-end"></span>
                                 <span> Dashboards </span>
                             </a>
-                            <div class="collapse" id="sidebarDashboards">
+                            <div class="collapse" id="dashboard">
                                 <ul class="side-nav-second-level">
                                     <li>
-                                        <a href="dashboard-analytics.html">Analytics</a>
-                                    </li>
-                                    <li>
-                                        <a href="index.html">Ecommerce</a>
-                                    </li>
-                                    <li>
-                                        <a href="dashboard-projects.html">Projects</a>
-                                    </li>
-                                    <li>
-                                        <a href="dashboard-wallet.html">E-Wallet <span class="badge rounded bg-danger font-10 float-end">New</span></a>
+                                        <a href="/dashboard">Dashboard Viajes</a>
                                     </li>
                                 </ul>
                             </div>
                         </li>
 
+                        <li class="side-nav-item">
+                            <a data-bs-toggle="collapse" href="#destino" aria-expanded="false" aria-controls="destino" class="side-nav-link">
+                                <i class="uil-home-alt"></i>
+                                <span class="badge bg-success float-end"></span>
+                                <span> Destinos </span>
+                            </a>
+                            <div class="collapse" id="destino">
+                                <ul class="side-nav-second-level">
+                                    <li>
+                                        <a href="/destinos">Destinos disponibles</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
                         
                     </ul>
                     <!-- End Sidebar -->
@@ -105,8 +110,8 @@
                                         <img src="../static/assets/images/users/avatar-1.jpg" alt="user-image" class="rounded-circle">
                                     </span>
                                     <span>
-                                        <span class="account-user-name">Dominic Keller</span>
-                                        <span class="account-position">Founder</span>
+                                        <span class="account-user-name">Mauro Perelda</span>
+                                        <span class="account-position">mauroperelda10@gmail.com</span>
                                     </span>
                                 </a>
                                 <!-- <div class="dropdown-menu dropdown-menu-end dropdown-menu-animated topbar-dropdown-menu profile-dropdown"> -->
