--- a/Templates/Layout.html
+++ b/Templates/Layout.html
@@ -3,7 +3,8 @@
 
     <head>
         <meta charset="utf-8" />
-        <title>Dashboard | Hyper - Responsive Bootstrap 5 Admin Dashboard</title>
+        <title>{% block title %}{% endblock %}</title>
+        <!-- <title>Dashboard </title> -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta content="A fully featured admin theme which can be used to build CRM, CMS, etc." name="description" />
         <meta content="Coderthemes" name="author" />
@@ -114,44 +115,7 @@
                                         <span class="account-position">mauroperelda10@gmail.com</span>
                                     </span>
                                 </a>
-                                <!-- <div class="dropdown-menu dropdown-menu-end dropdown-menu-animated topbar-dropdown-menu profile-dropdown"> -->
-                                    <!--  item--> 
-                                    <!-- <div class=" dropdown-header noti-title"> -->
-                                        <!-- <h6 class="text-overflow m-0">Bienvenido!</h6> -->
-                                    <!-- </div> -->
-
-                                    <!--  item--> 
-                                    <!-- <a href="javascript:void(0);" class="dropdown-item notify-item"> -->
-                                        <!-- <i class="mdi mdi-account-circle me-1"></i> -->
-                                        <!-- <span>Cambiar Contraseña</span> -->
-                                    <!-- </a> -->
-
-                                    <!--  item--> 
-                                    <!-- <a href="javascript:void(0);" class="dropdown-item notify-item"> -->
-                                        <!-- <i class="mdi mdi-account-edit me-1"></i> -->
-                                        <!-- <span>Salis</span> -->
-                                    <!-- </a> -->
-
-                                    <!--  item-->
-                                    <!-- <a href="javascript:void(0);" class="dropdown-item notify-item"> -->
-                                        <!-- <i class="mdi mdi-lifebuoy me-1"></i> -->
-                                        <!-- <span>Support</span> -->
-                                    <!-- </a> -->
-
-                                    <!--  item--> 
-                                    <!-- <a href="javascript:void(0);" class="dropdown-item notify-item"> -->
-                                        <!-- <i class="mdi mdi-lock-outline me-1"></i> -->
-                                        <!-- <span>Lock Screen</span> -->
-                                    <!-- </a> -->
-
-                                    <!--  item--> 
-                                    <!-- <a href="javascript:void(0);" class="dropdown-item notify-item"> -->
-                                        <!-- <i class="mdi mdi-logout me-1"></i> -->
-                                        <!-- <span>Logout</span> -->
-                                    <!-- </a> -->
-                                <!-- </div> -->
                             </li>
-
                         </ul>
                         <button class="button-menu-mobile open-left">
                             <i class="mdi mdi-menu"></i>
@@ -159,31 +123,20 @@
                     </div>
                     <!-- end Topbar -->
                     
-                    <!-- Start Content-->
-                    <!-- container -->
+                    <!-- Start container-->
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="card">
+                                <div class="card-body">
+                                    {% block content %}{% endblock %}
+                                </div>
+                            </div>
+                        </div>
 
+                    </div>
+                    <!-- container -->
                 </div>
                 <!-- content -->
-
-                <!-- Footer Start -->
-                <footer class="footer">
-                    <div class="container-fluid">
-                        <div class="row">
-                            <!-- <div class="col-md-6"> -->
-                                <!-- <script>document.write(new Date().getFullYear())</script> © Hyper - Coderthemes.com -->
-                            <!-- </div> -->
-                            <!-- <div class="col-md-6"> -->
-                                <!-- <div class="text-md-end footer-links d-none d-md-block"> -->
-                                    <!-- <a href="javascript: void(0);">About</a> -->
-                                    <!-- <a href="javascript: void(0);">Support</a> -->
-                                    <!-- <a href="javascript: void(0);">Contact Us</a> -->
-                                <!-- </div> -->
-                            <!-- </div> -->
-                        </div>
-                    </div>
-                </footer>
-                <!-- end Footer -->
-
             </div>
 
             <!-- ============================================================== -->
@@ -210,5 +163,7 @@
         <!-- demo app -->
         <script src="../static/assets/js/pages/demo.dashboard.js"></script>
         <!-- end demo js-->
+
+        {% block scripts %}{% endblock %}
     </body>
 </html>
