--- a/Templates/Layout.html
+++ b/Templates/Layout.html
@@ -98,7 +98,7 @@
                             <div class="collapse" id="usuario">
                                 <ul class="side-nav-second-level">
                                     <li>
-                                        <a href="/reservas_activas">Reservas Activas</a>
+                                        <a href="/reservas_activas">Historial de viajes</a>
                                     </li>
                                 </ul>
                             </div>
