--- a/Templates/reservas_activas.html
+++ b/Templates/reservas_activas.html
@@ -6,10 +6,10 @@
 {% block content %}
 <div class="row">
     <div class="col-md-4">
-        <label for="simpleinput" class="form-label">Buscar reservas por usuario</label>
+        <label for="simpleinput" class="form-label">Reservas</label>
         <div class="input-group">
-            <input type="text" class="form-control" id="search-query" placeholder="Ingrese usuario">
-            <button type="button" class="btn btn-primary" onclick="searchReservas()">Buscar</button>
+            <!-- <input type="text" class="form-control" id="search-query" placeholder="Ingrese usuario">
+            <button type="button" class="btn btn-primary" onclick="searchReservas()">Buscar</button> -->
         </div>
     </div>
 </div>
@@ -17,11 +17,9 @@
 <table class="table mt-3">
     <thead>
         <tr>
-            <th>Nombre</th>
-            <th>Precio</th>
-            <th>Cupo</th>
-            <th>Fecha Inicio</th>
-            <th>Fecha Fin</th>
+            <th>Nombre Paquete</th>
+            <th>Fecha Reserva</th>
+            <th>Cantidad Personas</th>
             <!-- <th>Destino</th> -->
         </tr>
     </thead>
@@ -32,6 +30,36 @@
 
 {% block scripts %}
 <script>
+    document.addEventListener('DOMContentLoaded', function() {
+        searchReservas();
+    });
 
+    async function searchReservas() {
+        debugger;
+        try {
+            const response = await fetch(`api/ACT-RESERVA`);
+            if (!response.ok) {
+                const errorData = await response.json();
+                alert(`Error: ${errorData.message}`);
+                return;
+            }
+            const results = await response.json();
+            console.log(results);
+            const list = document.getElementById('paquetes-destinos');
+            list.innerHTML = '';
+            results.forEach(reserva => {
+                const listItem = document.createElement('tr');
+                listItem.innerHTML = `
+                    <td>${reserva.nombre_paquete}</td>
+                    <td>${reserva.fecha_reserva}</td>
+                    <td>${reserva.cantidad_personas}</td>
+                `;
+                list.appendChild(listItem);
+            });
+        } catch (error) {
+            console.error('Error buscando reservas:', error);
+            alert('Error al buscar reservas');
+        }
+    }
 </script>
 {% endblock %}
