--- a/Templates/pages-register.html
+++ b/Templates/pages-register.html
@@ -78,7 +78,7 @@
 
                         <div class="row mt-3">
                             <div class="col-12 text-center">
-                                <p class="text-muted">Ya tienes una cuenta? <a href="/login" class="text-muted ms-1"><b>Iniciar Sesión</b></a></p>
+                                <p class="text-muted">Ya tienes una cuenta? <a href="/" class="text-muted ms-1"><b>Iniciar Sesión</b></a></p>
                             </div> <!-- end col-->
                         </div>
                         <!-- end row -->
